external-crates/move/crates/move-compiler/tests/move_check/borrows/binop_ref_parse_error.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/borrows/binop_ref_parse_error.move:5:15
  │
5 │         id(x).*x;
  │               ^
  │               │
  │               Unexpected '*'
  │               Expected an identifier or a decimal number
